Bug 33137 - Calc: Countif formula with external ref does not seem to work
Summary: Calc: Countif formula with external ref does not seem to work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 RC3
Hardware: All macOS (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-14 15:02 UTC by Midiar
Modified: 2011-05-14 04:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Archive containing S.ods and K.ods (23.20 KB, application/zip)
2011-01-14 15:02 UTC, Midiar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Midiar 2011-01-14 15:02:56 UTC
Created attachment 42064 [details]
Archive containing S.ods and K.ods

Attached 2 simple ods files. S.ods has 2 formulas referencing K.ods. The Countif
formula gives Error 504. The Sum formula works ok.

I created the files in OpenOffice.org 3.2.1, and there both formulas work.
(And I have been using Countif formulas like this for a long time.)

If that is important, I actually created the files using Norwegian app
language, using Antall.hvis, the Norwegian equivalent of Countif.

Using LibO_3.3.0rc3_MacOS_x86_install_en-US, but I also saw it with LibO_3.3.0rc2_MacOS_x86_install_en-US.

I guess this bug is similar to bug 33002.
Comment 1 Kohei Yoshida 2011-01-14 15:21:41 UTC
This is my area.
Comment 2 Midiar 2011-04-23 03:23:21 UTC
I checked this again on LibO_3.4.0beta2_MacOS_x86_install_en-US.dmg, and the Countif still fails in my sample files. Not surprisingly, since the bug is not marked as fixed.
Comment 4 Midiar 2011-05-14 04:46:37 UTC
I tried the sample files again in LibO_3.4.0beta5_MacOS_x86_install_en-US, and the CountIf worked like a charm.

I also opened my original "summary from the account details" worksheet, and after a while it had processed all the CountIfs and SumIfs correctly. (The release 3.3 version was very fast in opening the file, but that was probably because the formulas failed, and failed quickly.)