fdo#33137: Fixed external references with COUNTIF.